@@ -1,71 +1,82 @@
 package com.backend.backend.service;
 
-import com.backend.backend.dto.SupplierDTO;
+import com.backend.backend.dto.common.PageResponse;
+import com.backend.backend.dto.supplier.SupplierCreateRequest;
+import com.backend.backend.dto.supplier.SupplierResponse;
+import com.backend.backend.dto.supplier.SupplierUpdateRequest;
 import com.backend.backend.entity.Supplier;
 import com.backend.backend.exception.ResourceNotFoundException;
+import com.backend.backend.mapper.SupplierMapper;
 import com.backend.backend.repository.SupplierRepository;
+import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class SupplierService {
 
     private final SupplierRepository supplierRepository;
+    private final SupplierMapper supplierMapper;
 
-    public SupplierService(SupplierRepository supplierRepository) {
+    public SupplierService(SupplierRepository supplierRepository, SupplierMapper supplierMapper) {
         this.supplierRepository = supplierRepository;
+        this.supplierMapper = supplierMapper;
     }
 
-    public List<SupplierDTO> findAll() {
+    @Transactional
+    public SupplierResponse create(SupplierCreateRequest request) {
+        Supplier entity = supplierMapper.toEntity(request);
+        Supplier saved = supplierRepository.save(entity);
+        return supplierMapper.toResponse(saved);
+    }
+
+    @Transactional
+    public SupplierResponse update(Long id, SupplierUpdateRequest request) {
+        Supplier entity = supplierRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy nhà cung cấp với ID: " + id));
+        supplierMapper.updateEntity(entity, request); // partial update
+        Supplier saved = supplierRepository.save(entity);
+        return supplierMapper.toResponse(saved);
+    }
+
+    @Transactional(readOnly = true)
+    public SupplierResponse getById(Long id) {
+        Supplier entity = supplierRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy nhà cung cấp với ID: " + id));
+        return supplierMapper.toResponse(entity);
+    }
+
+    @Transactional(readOnly = true)
+    public List<SupplierResponse> findAll() {
         return supplierRepository.findAll().stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .map(supplierMapper::toResponse)
+                .toList();
     }
 
-    public SupplierDTO findById(Long id) {
-        Supplier supplier = supplierRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy nhà cung cấp với ID: " + id));
-        return convertToDTO(supplier);
+    @Transactional(readOnly = true)
+    public PageResponse<SupplierResponse> list(int page, int size, String sort) {
+        Sort s = (sort == null || sort.isBlank()) ? Sort.by("id").descending() : Sort.by(sort);
+        Pageable pageable = PageRequest.of(page, size, s);
+        Page<Supplier> result = supplierRepository.findAll(pageable);
+
+        return PageResponse.<SupplierResponse>builder()
+                .items(result.getContent().stream().map(supplierMapper::toResponse).toList())
+                .page(result.getNumber())
+                .size(result.getSize())
+                .totalElements(result.getTotalElements())
+                .totalPages(result.getTotalPages())
+                .first(result.isFirst())
+                .last(result.isLast())
+                .build();
     }
 
-    public SupplierDTO create(SupplierDTO dto) {
-        Supplier supplier = convertToEntity(dto);
-        Supplier savedSupplier = supplierRepository.save(supplier);
-        return convertToDTO(savedSupplier);
-    }
-
-    public SupplierDTO update(Long id, SupplierDTO dto) {
-        Supplier existing = supplierRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy nhà cung cấp với ID: " + id));
-
-        existing.setName(dto.getName());
-        existing.setContactInfo(dto.getContactInfo());
-
-        Supplier savedSupplier = supplierRepository.save(existing);
-        return convertToDTO(savedSupplier);
-    }
-
+    @Transactional
     public void delete(Long id) {
         if (!supplierRepository.existsById(id)) {
             throw new ResourceNotFoundException("Không tìm thấy nhà cung cấp với ID: " + id);
         }
         supplierRepository.deleteById(id);
-    }
-
-    private SupplierDTO convertToDTO(Supplier supplier) {
-        SupplierDTO dto = new SupplierDTO();
-        dto.setId(supplier.getId());
-        dto.setName(supplier.getName());
-        dto.setContactInfo(supplier.getContactInfo());
-        return dto;
-    }
-
-    private Supplier convertToEntity(SupplierDTO dto) {
-        Supplier supplier = new Supplier();
-        supplier.setName(dto.getName());
-        supplier.setContactInfo(dto.getContactInfo());
-        return supplier;
     }
 }
